clusters/base_cluster/go_webhook_example/dev/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-example
  labels:
    admission-webhook: enabled
