clusters/base_cluster/go_webhook_example/dev/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-webhook
  name: simple-webhook
  namespace: webhook-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-webhook
  template:
    metadata:
      labels:
        app: simple-webhook
    spec:
#      tolerations:
#        - key: acme.com/lifespan-remaining
#          operator: Exists
#          effect: NoSchedule
      containers:
        - image: devregistry:5000/simple-webhook:latest
          imagePullPolicy: Always
          name: simple-webhook
          volumeMounts:
            - name: tls
              mountPath: "/etc/tls"
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: simple-webhook-tls
