clusters/base_cluster/go_webhook_example/dev/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-webhook
  name: simple-webhook
  namespace: webhook-example
spec:
  type: NodePort
  selector:
    app: simple-webhook
  ports:
    - name: "https"
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30100
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 30101
