clusters/base_cluster/go_webhook_example/dev/manifests/stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-example
  labels:
    admission-webhook: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-webhook
  name: simple-webhook
  namespace: webhook-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-webhook
  template:
    metadata:
      labels:
        app: simple-webhook
    spec:
#      tolerations:
#        - key: acme.com/lifespan-remaining
#          operator: Exists
#          effect: NoSchedule
      containers:
        - image: k3d-devregistry:5000/simple-webhook:latest
          imagePullPolicy: Always
          name: simple-webhook
          volumeMounts:
            - name: tls
              mountPath: "/etc/tls"
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: simple-webhook-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-webhook
  name: simple-webhook
  namespace: webhook-example
spec:
  type: NodePort
  selector:
    app: simple-webhook
  ports:
    - name: "https"
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 30100
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 30101
