clusters/base_cluster/go_webhook_example/dev/manifests/mutating_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "simple-webhook.acme.com"
webhooks:
  - name: "simple-webhook.acme.com"
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: webhook-example
        name: simple-webhook
        path: /mutate-pods
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURMVENDQWhXZ0F3SUJBZ0lVSGhYNmpidzBR
[...]
        LS0tRU5EIENFUlRJRklDQVRFLS0tLS0K
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
